--- a/Tree_Types_Prediction_EDA.ipynb
+++ b/Tree_Types_Prediction_EDA.ipynb
@@ -3134,7 +3134,7 @@
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3285,7 +3285,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -4003,7 +4003,9 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
